# tokengram_F

./: LICENSE  README.md  pyproject.toml
src/tokengram_F/: tokengram_F.py  train_model.py
src/tokengram_F/model_utils/: MonolingualData.md
src/tokengram_F/models/: abk-50000.spm  ace-50000.spm  ady-50000.spm  afr-50000.spm  aka-50000.spm  amh-50000.spm  ang-50000.spm  ara-50000.spm  arc-50000.spm  arg-50000.spm  asm-50000.spm  ast-50000.spm  atj-50000.spm  ava-50000.spm  awa-50000.spm  aym-50000.spm  aze-50000.spm  bak-50000.spm  bam-50000.spm  ban-50000.spm  bar-50000.spm  bel-50000.spm  ben-50000.spm  bih-50000.spm  bik-50000.spm  bis-50000.spm  bod-50000.spm  bpy-50000.spm  bre-50000.spm  bua-50000.spm  bug-50000.spm  bul-50000.spm  cat-50000.spm  ceb-50000.spm  ces-50000.spm  cha-50000.spm  che-50000.spm  chm-50000.spm  cho-50000.spm  chr-50000.spm  (+205 more)
